перенос шрифтов и спрайтов в папку src

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="/sprite/sprite.css" rel="stylesheet">
+    <link href="/src/assets/css/sprite.css" rel="stylesheet">
     <link rel="stylesheet" href="/swiper/swiper.min.css">
     <title>React App</title>
   </head>
