--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="/src/assets/css/sprite.css" rel="stylesheet">
     <link rel="stylesheet" href="/swiper/swiper.min.css">
-    <title>React App</title>
+    <title>News&Articles</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
